GNOME Bugzilla – Bug 656519
memleak fixes
Last modified: 2011-08-14 16:22:23 UTC
Created attachment 193815 [details] [review] fix use after free While running frogr through valgrind, a few memory leaks have been reported.
Created attachment 193816 [details] [review] memleak fixes
Created attachment 193817 [details] [review] fix memleak/fix bug in icon list generation
Shame on me, all those leaks are for real and just released one more time to the world along with frogr 0.6... :/ Still, thanks for hunting them down and for providing the patches. I already pushed them. Thanks!